1. Stream API [#58166 #367835]