@@ -1,7 +1,6 @@
-package ru.job4j;
+package ru.job4j.stream;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StreamUsage {
     public static class Task {
@@ -29,8 +28,16 @@ public class StreamUsage {
             );
             List<Task> bugs = tasks.stream()
                     .filter(task -> task.name.contains("Bug"))
-                    .collect(Collectors.toList());
+                    .toList();
             bugs.forEach(System.out::println);
+            List<String> names = tasks.stream()
+                    .map(task -> task.name)
+                    .toList();
+            names.forEach(System.out::println);
+            long total = tasks.stream()
+                    .map(task -> task.spent)
+                    .reduce(0L, Long::sum);
+            System.out.println(total);
         }
     }
 }
